--- a/LESS/structure/main.less
+++ b/LESS/structure/main.less
@@ -86,5 +86,7 @@ span#right {
 }
 
 .center { 
+	margin-left: auto;
+	margin-right: auto;
 	text-align: center; 
 }
